--- a/DXF/Readme
+++ b/DXF/Readme
@@ -1,1 +1,1 @@
-
+These are the base DXF's for the design - this CAN be laser cut if you have access to a machine suitable. While the design was originally intended to be hand cut, it of course lasers also, and at a significantly great rate than any existing designs I have seen thus far.
